# EISpy

./: .gitignore  .readthedocs.yml  .travis.yml  MANIFEST.in  README.rst  setup.cfg  setup.py
docs/: conf.py  index.rst  rtd-pip-requirements.txt
docs/eispy/: index.rst
eispy/: __init__.py  conftest.py  eis_cube.py  eis_prep.py  eis_spectral_cube.py  eis_utils.py
eispy/calibration/: data_calibration.py  eis_prep.py  io.py  pixel_calibration.py
eispy/cube/: __init__.py  eis_cube.py
eispy/cube/tests/: test_cube.py
eispy/legacy/: README.rst  eis_spectral_cube.py  eis_utils.py
eispy/legacy/calibration/: __init__.py  constants.py  io.py  pixel_calibration.py
eispy/legacy/tests/: _test_eis_util.py  orbit_idl.out  orbit_slit1_nointerp.txt  orbit_slit2.txt  orbit_slit2_CalibTimes.txt
eispy/tests/: orbit_idl.pro  orbit_slit1.txt  orbit_slit1_CalibTimes.txt  orbit_slit2_nointerp.txt  test_eis_util.py
examples/: README.rst  plot_eis.py
idlcode/: eis_cal__define.pro  eis_data__define.pro  eis_model_series.pro  eis_slit_tilt.pro  eis_sts3_temp.pro  eis_temp_model.pro  eis_wave_corr.pro  eis_wave_corr_hk.pro  fpp1_dopp_series.pro
