[build_sphinx]
source-dir = doc
build-dir = doc/build
all_files = 1

[upload_docs]
upload-dir = doc/build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build doc/build

[ah_bootstrap]
auto_use = True

[metadata]
package_name = eispy
description = EIS tools for python
long_description = This is a sunpy-dependent package for using the EIS instrument
author = Mateo Inchaurrandieta
author_email = mateo.inchaurrandieta@gmail.com
license = BSD
edit_on_github = True
github_project = MSSLSolar/EISpy
